sandbox-codebase/objects/Account/fields/Account_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Short_Name__c</fullName>
    <description>Used in Mogli SMS Automation for the Initial Outreach for SMS Opt In and Address Verification to ensure the Opt In Message does not exceed the character limit</description>
    <inlineHelpText>35 Characters. Used in Mogli SMS Automation for the Initial Outreach for SMS Opt In and Address Verification to ensure the Opt In Message does not exceed the character limit</inlineHelpText>
    <label>Account Short Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>