sandbox-codebase/objects/Account/fields/Billing_Model__c.field-meta.xml
<CustomField>
    <fullName>Billing_Model__c</fullName>
    <label>Billing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order_Level_Success</fullName>
                <label>Order Level (Bill on Completion, Success)</label>
            </value>
            <value>
                <fullName>Order_Level_Shipment</fullName>
                <label>Order Level (Bill on ship, Successful only)</label>
            </value>
            <value>
                <fullName>Study_Level_per_Shipment</fullName>
                <label>Study Level (Bill on ship, per shipment)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>