sandbox-codebase/objects/Account/fields/Express_Only__c.field-meta.xml
<CustomField>
    <fullName>Express_Only__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Express Only</label>
    <type>Checkbox</type>
</CustomField>