sandbox-codebase/objects/Account/fields/External_Portal_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Portal_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Portal Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>