sandbox-codebase/objects/Account/fields/heymarket__E164_Phone__c.field-meta.xml
<CustomField>
    <fullName>heymarket__E164_Phone__c</fullName>
    <formula>IF( LEN(SUBSTITUTE( 
 SUBSTITUTE( 
  SUBSTITUTE( 
   SUBSTITUTE( 
    SUBSTITUTE(
      Phone , &quot;(&quot;, &quot;&quot;
    ), &quot;)&quot;, &quot;&quot; 
   ), &quot; &quot;, &quot;&quot;
  ), &quot;-&quot;, &quot;&quot;
 ), &quot;+&quot;, &quot;&quot;
)) == 10 , &apos;1&apos;+SUBSTITUTE( 
 SUBSTITUTE( 
  SUBSTITUTE( 
   SUBSTITUTE( 
    SUBSTITUTE(
      Phone , &quot;(&quot;, &quot;&quot;
    ), &quot;)&quot;, &quot;&quot; 
   ), &quot; &quot;, &quot;&quot;
  ), &quot;-&quot;, &quot;&quot;
 ), &quot;+&quot;, &quot;&quot;
), SUBSTITUTE( 
 SUBSTITUTE( 
  SUBSTITUTE( 
   SUBSTITUTE( 
    SUBSTITUTE(
      Phone , &quot;(&quot;, &quot;&quot;
    ), &quot;)&quot;, &quot;&quot; 
   ), &quot; &quot;, &quot;&quot;
  ), &quot;-&quot;, &quot;&quot;
 ), &quot;+&quot;, &quot;&quot;
))</formula>
    <label>E164 Phone</label>
    <type>Text</type>
</CustomField>