sandbox-codebase/objects/Account/fields/heymarket__Heymarket_ID__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Heymarket_ID__c</fullName>
    <label>Heymarket ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>