sandbox-codebase/objects/Account/fields/Non_Traditional_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Non_Traditional_Protocol__c</fullName>
    <label>Non-Traditional Protocol</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Send Automated SMS</fullName>
            </value>
            <value>
                <fullName>SMS Opt In/Address Confirmation</fullName>
            </value>
            <value>
                <fullName>Ship Confirmation</fullName>
            </value>
            <value>
                <fullName>Delivery Notification</fullName>
            </value>
            <value>
                <fullName>Study Reminder/Return Instructions</fullName>
            </value>
            <value>
                <fullName>Follow Up Series</fullName>
            </value>
            <value>
                <fullName>PSAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>