sandbox-codebase/objects/Account/fields/Number_of_Billable_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Billable_Orders__c</fullName>
    <label>Number of Billable Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>