sandbox-codebase/objects/Account/fields/Number_of_Completed_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_Orders__c</fullName>
    <label>Number of Completed Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>