sandbox-codebase/objects/Account/fields/Percent_of_Billable_Orders__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Billable_Orders__c</fullName>
    <formula>IF(ISBLANK(Number_of_Completed_Orders__c),0,Number_of_Billable_Orders__c / Number_of_Completed_Orders__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent of Billable Orders</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>