sandbox-codebase/objects/Account/fields/Total_HSATs__c.field-meta.xml
<CustomField>
    <fullName>Total_HSATs__c</fullName>
    <label>Total Monthly HSATs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>