sandbox-codebase/objects/Account/recordTypes/Business.recordType-meta.xml
<RecordType>
    <fullName>Business</fullName>
    <active>true</active>
    <label>Business</label>
</RecordType>