sandbox-codebase/objects/Account/validationRules/First_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Required</fullName>
    <active>true</active>
    <description>Used only for PersonAccounts</description>
    <errorConditionFormula>AND(
				IsPersonAccount = True,
ISBLANK(FirstName)
				)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Please enter a first name.</errorMessage>
</ValidationRule>