sandbox-codebase/objects/Account/validationRules/Require_Short_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Short_Name</fullName>
    <active>true</active>
    <description>Require a short name for Business accounts so that the Mogli SMS automation will not fail due to length in the account name and character limits. https://basecamp.com/2583453/projects/19794483/todos/515713840</description>
    <errorConditionFormula>RecordType.Name = &apos;Business&apos; &amp;&amp;
(LEN(Name) &gt; 35) &amp;&amp;
ISBLANK(Account_Short_Name__c)</errorConditionFormula>
    <errorDisplayField>Account_Short_Name__c</errorDisplayField>
    <errorMessage>This Account name is longer than 35 characters. Please populate the Account Short Name for SMS automation purposes.</errorMessage>
</ValidationRule>