sandbox-codebase/objects/Account/listViews/Business_Accounts.listView-meta.xml
<ListView>
    <fullName>Business_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Short_Name__c</columns>
    <columns>Percent_of_Billable_Orders__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Billing_Model__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business</value>
    </filters>
    <label>Business Accounts</label>
</ListView>