sandbox-codebase/objects/Account/listViews/Patients.listView-meta.xml
<ListView>
    <fullName>Patients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_PHONE3</columns>
    <columns>PC_EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Patient</value>
    </filters>
    <label>Patients</label>
    <sharedTo>
        <group>Admin_Users_For_Sandbox</group>
        <roleAndSubordinatesInternal>Customer_Service_Owner</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>