sandbox-codebase/objects/Account/listViews/Patients_Address_Update_Required.listView-meta.xml
<ListView>
    <fullName>Patients_Address_Update_Required</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Address_Update_Required__pc</columns>
    <columns>SMS_Journey_Status__pc</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Address_Update_Required__pc</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Patients Address Update Required</label>
</ListView>